A lot of refactoring. Added draft testcontaniners IT tests.